--- a/package.json
+++ b/package.json
@@ -20,11 +20,21 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-intl": "^6.2.5",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.48.2",
     "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^9.0.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
     "prisma": "^4.8.1",
     "tailwindcss": "^3.2.4"
   }
