--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
+    "hammerjs": "^2.0.8",
     "next": "13.1.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
