--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-intl": "^6.2.5",
+    "react-responsive-carousel": "^3.2.23",
     "typescript": "4.9.4"
   },
   "devDependencies": {
