--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "apexcharts": "^3.36.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "hammerjs": "^2.0.8",
     "next": "13.1.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
