--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-intl": "^6.2.5",
